Underlined active nav item and fixed nav spacing
Instead of space-between, the logo is now flex: 1, which means there is no extra space between nav items on the right.

--- a/app/styles/_navbar.scss
+++ b/app/styles/_navbar.scss
@@ -13,7 +13,6 @@
     width: $app-width;
     height: 100%;
     display: flex;
-    justify-content: space-between;
     margin: 0 auto;
   }
 
@@ -23,12 +22,24 @@
     display: block;
     text-decoration: none;
     color: #533019;
+
+    &.active {
+      border-bottom: 2px solid #533019;
+    }
+  }
+
+  &__logo-container {
+    flex: 1;
   }
 
   &__logo {
     padding: 16px 0 0 0;
     margin-right: 168px;
     width: 208px;
+
+    &.active {
+      border-bottom: none;
+    }
   }
 
   &__logo-image {
